--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -66,6 +66,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "error404";
 @import "search";
 @import "single";
+@import "comments";
 body {
     font-size: 16px;
 }
