--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -58,10 +58,10 @@ a {
             a {
                 width: 200px;
             }
-             :hover>a,
-            .focus>a {}
-            a:hover,
-            a.focus {}
+            //  :hover>a,
+            // .focus>a {}
+            // a:hover,
+            // a.focus {}
         }
         li:hover>ul,
         li.focus>ul {
@@ -71,16 +71,16 @@ a {
     li {
         float: left;
         position: relative;
-        &:hover>a,
-        &.focus>a {}
+        // &:hover>a,
+        // &.focus>a {}
     }
     a {
         display: block;
         text-decoration: none;
     }
-    .current_page_item>a,
-    .current-menu-item>a,
-    .current_page_ancestor>a {}
+    // .current_page_item>a,
+    // .current-menu-item>a,
+    // .current_page_ancestor>a {}
 }
 
 
