--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -64,6 +64,159 @@
         font-size: 2.4rem;
         font-weight: 400;
     }
+    
+    .home-banner {
+        background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4) 0), #969696 $url_0 no-repeat top;
+        background-size: cover;
+        height: 100vh;
+        img {
+            position: absolute;
+            margin: auto;
+            top: 12rem;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+    }
+    
+    .product-type-block-wrapper {
+        display: flex;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        text-align: center;
+    }
+    
+    .latest-adventures {
+        ul {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 250px 250px;
+            grid-gap: 1em;
+            li {
+                &:nth-child(1) {
+                    grid-row: 1 / 3;
+                    grid-column: 1 /3;
+                    img {
+                        // &::after {
+                        //     background-image: red;
+                        // }
+                        transform: translate(-50%, -75%);
+                        left: 50%;
+                        max-height: 555px;
+                        max-width: none;
+                        position: absolute;
+                        top: 49%;
+                        transform: translate(-50%, -50%);
+                        width: auto;
+                    }
+                }
+                &:nth-child(2) {
+                    grid-row: 1 / 2;
+                    grid-column: 3 /5;
+                    img {
+                        transform: translate(-50%, -75%);
+                        left: 50%;
+                        max-height: 460px;
+                        max-width: none;
+                        position: absolute;
+                        top: 38%;
+                        transform: translate(-50%, -50%);
+                        width: auto;
+                    }
+                }
+                &:nth-child(3) {
+                    // grid-row: 2/ 3;
+                    // grid-column: 5 /6;
+                    img {
+                        transform: translate(-50%, -75%);
+                        left: 50%;
+                        max-height: 367px;
+                        max-width: none;
+                        position: absolute;
+                        top: 38%;
+                        transform: translate(-50%, -50%);
+                        width: auto;
+                    }
+                }
+                &:nth-child(4) {
+                    // grid-row: 2/ 3;
+                    // grid-column: 5 /6;
+                    img {
+                        transform: translate(-50%, -75%);
+                        left: 50%;
+                        max-height: 367px;
+                        max-width: none;
+                        position: absolute;
+                        top: 38%;
+                        transform: translate(-50%, -50%);
+                        width: auto;
+                    }
+                }
+                line-height: 1;
+                overflow: hidden;
+                position: relative;
+            }
+        }
+    }
+    
+    .adv-pic-wrapper::after {
+        //creating shadow over the adventures images
+        background: rgba(0, 0, 0, .35);
+        content: "";
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+    }
+    
+    .adventure-title {
+        margin: 1.5rem;
+        position: absolute;
+        z-index: 2;
+    }
+    
+    .product-type-block-wrapper {
+        display: grid;
+        border: 1px solid #e1e1e1;
+        border-top-width: 5px;
+        max-width: 100%;
+        padding: .75rem;
+        font-family: 'Merriweather', Courier, serif;
+        justify-items: center;
+    }
+    
+    .shop-stuff>h2 {
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        font-size: 2.4rem;
+        font-weight: 400;
+    }
+    
+    .journal-pic-title {
+        font-family: 'Merriweather', Courier, serif;
+        font-size: 3rem;
+        font-weight: 400;
+        text-transform: capitalize;
+        line-height: 4rem;
+    }
+    
+    .journal-pic-mid {
+        font-family: 'Merriweather', Courier, serif;
+        font-size: 2.2rem;
+        font-weight: 500;
+        text-transform: capitalize;
+        line-height: 3rem;
+    }
+    
+    .journal-pic-small {
+        font-family: 'Merriweather', Courier, serif;
+        font-size: 1.7rem;
+        font-weight: 400;
+        text-transform: capitalize;
+    }
     /**************************************************
     * btn-black
     ***************************************************/
