--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -83,6 +83,12 @@ table {
     }
     .entry-title {
         font-family: 'Merriweather', serif;
+        margin: 0px;
+        position: relative;
+        z-index: 2;
+    }
+    li {
+        list-style-type: none;
     }
     img {
         height: auto;
@@ -150,4 +156,31 @@ table {
     font-family: 'Merriweather', serif;
     padding-right: 66px;
     line-height: 1.8rem;
+}
+
+.btn,
+input[type="submit"] {
+    background: #248a83;
+    border: none;
+    border-radius: 0;
+    color: #fff;
+    cursor: pointer;
+    font-family: 'Novecentos', sans-serif;
+    font-size: 14.4px;
+    font-size: .9rem;
+    line-height: 1;
+    padding: .75rem 1.5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    min-width: 145px;
+    max-width: 145px;
+    box-shadow: none;
+}
+
+.product-type-block-wrapper:hover {
+    border-color: $color__orange-brand;
+}
+
+.btn-link a:hover {
+    background: $color__btn-green-hover;
 }
