fixing homepage read more buttons and hover state for find us page submit button

--- a/themes/inhabitent/sass/_contact.scss
+++ b/themes/inhabitent/sass/_contact.scss
@@ -29,6 +29,7 @@
         margin-bottom: 6rem;
         &:hover {
             box-shadow: none;
+            background: $color__btn-green-hover;
         }
     }
 }
