--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -2,61 +2,61 @@
 # Content
 --------------------------------------------------------------*/
     /* Posts and pages */
-    
+
     .sticky {
         display: block;
     }
-    
+
     .hentry {
         margin: 0;
     }
-    
+
     .updated:not(.published) {
         display: none;
     }
-    
+
     .single .byline,
     .group-blog .byline {
         display: inline;
     }
-    
+
     .page-content,
     .entry-content,
     .entry-summary {
         margin: $base__space-unit 0 0;
     }
-    
+
     .page-links {
         clear: both;
         margin: 0 0 $base__space-unit;
     }
     /* Asides */
-    
+
     .blog .format-aside .entry-title,
     .archive .format-aside .entry-title {
         display: none;
     }
     /* Comments */
-    
+
     .comment-content a {
         word-wrap: break-word;
     }
-    
+
     .bypostauthor {
         display: block;
     }
-    
+
     .journal-entries li {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1em;
     }
-    
+
     .seperate-entries img {
         width: 362px;
         height: 246px;
     }
-    
+
     .big-title {
         text-align: center;
         margin-top: 60px;
@@ -64,7 +64,7 @@
         font-size: 2.4rem;
         font-weight: 400;
     }
-    
+
     .home-banner {
         background: linear-gradient(180deg, rgba(0, 0, 0, .4) 0, rgba(0, 0, 0, .4) 0), #969696 $url_0 no-repeat top;
         background-size: cover;
@@ -78,16 +78,17 @@
             bottom: 0;
         }
     }
-    
+
     .product-type-block-wrapper {
         display: flex;
         -ms-flex-pack: justify;
         justify-content: space-between;
         text-align: center;
     }
-    
+
     .latest-adventures {
         ul {
+
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-template-rows: 250px 250px;
@@ -158,7 +159,7 @@
             }
         }
     }
-    
+
     .adv-pic-wrapper::after {
         //creating shadow over the adventures images
         background: rgba(0, 0, 0, .35);
@@ -170,13 +171,16 @@
         width: 100%;
         z-index: 1;
     }
-    
+
     .adventure-title {
         margin: 1.5rem;
         position: absolute;
         z-index: 2;
+        a{
+            color: #fff;
+        }
     }
-    
+
     .product-type-block-wrapper {
         display: grid;
         border: 1px solid #e1e1e1;
@@ -186,7 +190,7 @@
         font-family: 'Merriweather', Courier, serif;
         justify-items: center;
     }
-    
+
     .shop-stuff>h2 {
         text-align: center;
         margin-top: 60px;
@@ -194,7 +198,7 @@
         font-size: 2.4rem;
         font-weight: 400;
     }
-    
+
     .journal-pic-title {
         font-family: 'Merriweather', Courier, serif;
         font-size: 3rem;
@@ -202,7 +206,7 @@
         text-transform: capitalize;
         line-height: 4rem;
     }
-    
+
     .journal-pic-mid {
         font-family: 'Merriweather', Courier, serif;
         font-size: 2.2rem;
@@ -210,19 +214,19 @@
         text-transform: capitalize;
         line-height: 3rem;
     }
-    
+
     .journal-pic-small {
         font-family: 'Merriweather', Courier, serif;
         font-size: 1.7rem;
         font-weight: 400;
         text-transform: capitalize;
     }
-    
+
     .product-info .container {
         margin-left: 60px;
         margin-right: 60px;
     }
-    
+
     .product-type-blocks {
         display: grid;
         grid-gap: 1.4em;
@@ -234,7 +238,7 @@
     /**************************************************
     * btn-black
     ***************************************************/
-    
+
     .btn-black a,
     a.read-more {
         border: 1px solid #000;
@@ -255,7 +259,7 @@
     /**************************************************
     * btn-black
     ***************************************************/
-    
+
     .blog .entry-content p:nth-of-type(1),
     .date .entry-content p:nth-of-type(1) {
         margin-bottom: 2rem;
@@ -264,7 +268,7 @@
         font-size: 1rem;
         line-height: 1.8rem;
     }
-    
+
     .date .page-header {
         height: 1.5rem;
         padding-bottom: 3rem;
@@ -278,17 +282,17 @@
             // padding-bottom: -40px;
         }
     }
-    
+
     .blog .entry-content p:nth-of-type(2),
     .date .entry-content p:nth-of-type(2) {
         margin-bottom: 5rem;
     }
-    
+
     .page-template-default .btn-black a {
         position: absolute;
         bottom: 11px;
     }
-    
+
     .front-post-info-wrapper {
         flex-direction: column;
         -ms-flex-pack: justify;
@@ -317,13 +321,13 @@
             font-size: 1.3rem;
         }
     }
-    
+
     .content-whole {
         margin-left: auto;
         margin-right: auto;
         max-width: 1120px;
     }
-    
+
     .shop-stuff-product-wrapper {
         display: grid;
         grid-gap: 1rem;
@@ -333,11 +337,11 @@
             height: auto;
         }
     }
-    
+
     .type-post .entry-header {
         margin-top: 3rem;
     }
-    
+
     .white-btn {
         border: 1px solid #fff;
         color: #000;
@@ -352,11 +356,11 @@
             border: 1px solid $color__green-brand;
         }
     }
-    
+
     .adv-btn:hover {
         color: $color__yellow-brand;
     }
-    
+
     .btn.more-adv-btn {
         display: inline-block;
         margin: 2rem 0;
@@ -366,16 +370,16 @@
             background: $color__btn-green-hover;
         }
     }
-    
+
     h3.comment-reply-title {
         font-size: 1.8rem;
     }
-    
+
     .logged-in-as a {
         color: $color__text-main;
         font-family: 'Merriweather', serif;
     }
-    
+
     .comment-form-comment {
         font-family: 'Novecentos', sans-serif;
         font-size: 1.1rem;
